test/integration/bad/examples-bad/new/ill-formed-statement15.stan
transformed data { for ( T in T ) void }